--- a/ipu/templates/account/login.html
+++ b/ipu/templates/account/login.html
@@ -13,7 +13,7 @@
 				<div class="row">
 					<div class="col s12">
 						<br>
-						<button type="submit" id="login-btn" name="login" class="btn waves-effect waves-light-right">Log In<i class="material-icons right">send</i></button>
+						<button type="submit" id="login-btn" name="login" data-id="false" class="btn waves-effect waves-light-right">Log In<i class="material-icons right">send</i></button>
 					</div>
 				</div>
 				<br>
