--- a/ipu/templates/account/landing.html
+++ b/ipu/templates/account/landing.html
@@ -11,15 +11,14 @@
 
 {% block content %}
 
-
 <div class="black_overlay" id="fade"></div>
 
-<div id="corner-buttons" class="hide-on-small-only hide-on-med-only">
+<div id="corner-buttons" class="hide-on-small-only">
       <a href = "javascript:void(0)" class="waves-effect waves-light btn sb" onclick = "document.getElementById('student-sign-up').style.display='flex';document.getElementById('fade').style.display='flex'">sign up as student</a>
       <a href = "javascript:void(0)" class="waves-effect waves-light btn sb" onclick = "document.getElementById('recruiter-sign-up').style.display='flex';document.getElementById('fade').style.display='flex'">sign up as recruiter</a>
 </div>
 
-<div id="corner-buttons-small" class="hide-on-large-only">
+<div id="corner-buttons-small" class="hide-on-large-only hide-on-med-only">
       <a href = "javascript:void(0)" class="waves-effect waves-light btn sb" onclick = "document.getElementById('student-sign-up').style.display='flex';document.getElementById('fade').style.display='flex'">sign up as student</a>
       <a href = "javascript:void(0)" class="waves-effect waves-light btn sb" onclick = "document.getElementById('recruiter-sign-up').style.display='flex';document.getElementById('fade').style.display='flex'">sign up as recruiter</a>
 </div>
@@ -27,8 +26,8 @@
 <div id="student-sign-up" class="white_content"> 
        <a href = "javascript:void(0)" onclick = "document.getElementById('student-sign-up').style.display='none';document.getElementById('fade').style.display='none'"><i class="fa fa-times fa-2x" id="cross"></i>
        </a>
-       <div class="row">
-			<div class="col s12 m8 l6 offset-m2 offset-l3">
+       <div class="row" id="student-signup-mainbox">
+			<div class="col s12 m8 l6" id="student-signup-box">
 				<div class="card-panel">
 					<h4> Student Signup </h4>
 					<div id="student-signup-div">
@@ -53,8 +52,8 @@
     <div id="recruiter-sign-up" class="white_content"> 
        <a href = "javascript:void(0)" onclick = "document.getElementById('recruiter-sign-up').style.display='none';document.getElementById('fade').style.display='none'"><i class="fa fa-times fa-2x" id="cross"></i>
        </a>
-       <div class="row">
-				<div class="col s12 m8 l6 offset-m2 offset-l3">
+       <div class="row" id="recruiter-signup-mainbox">
+				<div class="col s12 m8 l6" id="recruiter-signup-box">
 					<div class="card-panel">
 						<h4> Recruiter Signup </h4>
 						<div id="signup-div">
@@ -80,6 +79,7 @@
    <img src="{% static 'account/images/ipu-logo.png' %}" class="hide-on-small-only" height="150px" width="180px">
 
    <img src="{% static 'account/images/ipu-logo.png' %}" class="hide-on-med-only hide-on-large-only" height="100px" width="120px">
+   <h4 id="heading">LOGIN</h4>
 
       <div id="form-box">
            <div class="row">
@@ -93,23 +93,20 @@
     	            <div class="row">
                         <div class="col s12 m12 l12">
                           <div class="card-panel">
-                            <h4> Student Login </h4>
                             <div id="student-login-div">
                               <form method="POST" action="{% url 'student_login' %}" id="student-login-form">
                                 {% csrf_token %}
                                 {% form form=student_login_form %}{% endform %}
+                                 <div class="col s6">
+                                    <a href="{% url 'forgot_password' %}"> Forgot Password? </a>
+                                  </div>
                                 <div class="row">
                                   <div class="col s12">
                                     <br>
-                                    <button type="submit" id="student-login-btn" class="btn waves-effect waves-light-right">Log In<i class="material-icons right">send</i></button>
+                                    <button type="submit" id="student-login-btn" class="btn waves-effect waves-light-right">Log In</button>
                                   </div>
                                 </div>
                                 <br>
-                                <div class="row">
-                                  <div class="col s6 offset-s6">
-                                    <a href="{% url 'forgot_password' %}"> Forgot Password? </a>
-                                  </div>
-                                </div>
                               </form>
                             </div>
                           </div>
@@ -120,23 +117,20 @@
                    <div class="row">
                         <div class="col s12 m12 l12">
                           <div class="card-panel">
-                            <h4> Other Login </h4>
                             <div id="login-div">
                               <form method="POST" action="{% url 'login' %}" id="login-form">
                                 {% csrf_token %}
                                 {% form form=login_form %}{% endform %}
+                                <div class="col s6">
+                                    <a href="{% url 'forgot_password' %}"> Forgot Password? </a>
+                                  </div>
                                 <div class="row">
                                   <div class="col s12">
                                     <br>
-                                    <button type="submit" id="login-btn" class="btn waves-effect waves-light-right">Log In<i class="material-icons right">send</i></button>
+                                    <button type="submit" id="login-btn" class="btn waves-effect waves-light-right">Log In</button>
                                   </div>
                                 </div>
                                 <br>
-                                <div class="row">
-                                  <div class="col s6 offset-s6">
-                                    <a href="{% url 'forgot_password' %}"> Forgot Password? </a>
-                                  </div>
-                                </div>
                               </form>
                             </div>
                           </div>
