--- a/ipu/templates/account/base_home_layout.html
+++ b/ipu/templates/account/base_home_layout.html
@@ -1,240 +1,132 @@
 <!DOCTYPE html>
+{% load staticfiles %}
+
 <html>
-    {% load staticfiles %}
     <head>
-      
-      <!--Import Google Icon Font-->
-      <link type="text/css" rel="stylesheet" href="{% static 'css/font-awesome/css/font-awesome.min.css' %}" />
-      <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-      <!--Import materialize.css-->
-      <link type="text/css" rel="stylesheet" href="{% static 'css/materialize/css/materialize.min.css' %}"  media="screen,projection"/>
-      <link type="text/css" rel="stylesheet" href="{% static 'account/css/base_home_layout.css'%}"  media="screen,projection"/>
-      <!--Let browser know website is optimized for mobile-->
-      <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+            {% include 'material/includes/material_css.html' %}
+            <link type="text/css" rel="stylesheet" href="{% static 'css/font-awesome/css/font-awesome.min.css' %}" />
+            <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+            <link type="text/css" rel="stylesheet" href="{% static 'materialize-blue.css' %}" />
+            <link type="text/css" rel="stylesheet" href="{% static 'account/css/base_home_layout.css'%}"  media="screen,projection"/>
+            <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+            {% block head %}{% endblock %}
     </head>
 
     <body>
-<!--Dropdown menu for user icon in navbar-->
-      <ul id="dropdown1" class="dropdown-content">
-         
-        
-        <li>
-               
-            <a href="" id="img-box">
-                <img src="{% block user_photo %}{% endblock %}" class="circle" height="90" width="90">
-                <span class="black-text">{% block user_name_card %}{% endblock %}</span>
-                <span class="grey-text lighten-1">{% block user_email_id %}{% endblock %}</span>
-            </a>
-            
-        </li>
-        <li class="divider"></li>
-        <li><a href="#!"><i class="fa fa-sliders"></i>Account settings</a></li>
-        <li class="divider"></li>
-        <li><a href="#!"><i class="fa fa-bell"></i>Notifications</a></li>
-        <li class="divider"></li>
-        <li class="divider"></li>
-        <li><a href="{% url 'logout' %}"<i class="fa fa-sign-out"></i>Sign out</a></li>
-      </ul>
-<!--Dropdown menu for menu in navbar-->
-      <ul id="dropdown2" class="dropdown-content">
-       {% block menu_icon_dropdown %}
-        <li><a href="#!">wrgwearg</a></li>
-        <li class="divider"></li>
-       {% endblock %} 
-      </ul>
-<!--Dropdown menu for notifications icon in navbar-->
-      <ul class="collapsible dropdown-content" data-collapsible="accordion" id="dropdown3">
-          <div id="noti-head">Notifications</div>
-           {% block notifications_dropdown %}
-           <!--every li here represents a notifcations. header anf body for notifications repectively-->
-          <li>
-            <div class="collapsible-header">First</div>
-            <div class="collapsible-body"><p>Lorem ipsum dolor sit amet.</p></div>
-          </li>
-          <li>
-            <div class="collapsible-header">Second</div>
-            <div class="collapsible-body"><p>Lorem ipsum dolor sit amet.</p></div>
-          </li>
-          <li>
-            <div class="collapsible-header">Third</div>
-            <div class="collapsible-body"><p>Lorem ipsum dolor sit amet.</p></div>
-          </li>
-          <li>
-            <div class="collapsible-header">Fourth</div>
-            <div class="collapsible-body"><p>Lorem ipsum dolor sit amet.</p></div>
-          </li>
-           {% endblock %}
-      </ul>
+        <ul id="dropdown1" class="dropdown-content">
+            <li>
+                <a href="" id="img-box">
+                    <img src="{% block user_photo %}{% endblock %}" class="circle" height="90" width="90">
+                    <span class="black-text">{% block user_name_card %}{% endblock %}</span>
+                    <span class="grey-text lighten-1">{% block user_email_id %}{% endblock %}</span>
+                </a>
+            </li>
+            <li class="divider"></li>
+            <li><a href="#!"><i class="fa fa-sliders"></i>Account settings</a></li>
+            <li class="divider"></li>
+            <li><a href="#!"><i class="fa fa-bell"></i>Notifications</a></li>
+            <li class="divider"></li>
+            <li class="divider"></li>
+            <li><a href="{% url 'logout' %}"><i class="fa fa-sign-out"></i>Sign out</a></li>
+        </ul>
+        <ul id="dropdown2" class="dropdown-content">
+            {% block menu_icon_dropdown %}
+                <li><a href="#!">wrgwearg</a></li>
+                <li class="divider"></li>
+            {% endblock %} 
+        </ul>
+        <ul class="collapsible dropdown-content" data-collapsible="accordion" id="dropdown3">
+            <div id="noti-head">Notifications</div>
+            {% block notifications_dropdown %}
+            <!--every li here represents a notifcations. header anf body for notifications repectively-->
+                <li>
+                    <div class="collapsible-header">First</div>
+                    <div class="collapsible-body"><p>Lorem ipsum dolor sit amet.</p></div>
+                </li>
+                <li>
+                    <div class="collapsible-header">Second</div>
+                    <div class="collapsible-body"><p>Lorem ipsum dolor sit amet.</p></div>
+                </li>
+                <li>
+                    <div class="collapsible-header">Third</div>
+                    <div class="collapsible-body"><p>Lorem ipsum dolor sit amet.</p></div>
+                </li>
+                <li>
+                    <div class="collapsible-header">Fourth</div>
+                    <div class="collapsible-body"><p>Lorem ipsum dolor sit amet.</p></div>
+                </li>
+            {% endblock %}
+        </ul>
 <!--Search box for tab and mobile view-->
-      <div id="light" class="white_content"> 
-              <form id="box-search">
-                      <input id="search" type="search" required placeholder="Search...">
-                      <a class="waves-effect waves-light btn">Go</a>
-              </form> 
-          <a href = "javascript:void(0)" onclick = "document.getElementById('light').style.display='none';document.getElementById('fade').style.display='none'"><i class="fa fa-times fa-2x"></i>
-          </a></div>
-      <div id="fade" class="black_overlay"></div>
-
-
-     
+        <div id="light" class="white_content"> 
+            <form id="box-search">
+                <input id="search" type="search" required placeholder="Search...">
+                <a class="waves-effect waves-light btn">Go</a>
+            </form> 
+            <a href = "javascript:void(0)" onclick = "document.getElementById('light').style.display='none'; document.getElementById('fade').style.display='none'; "><i class="fa fa-times fa-2x"></i></a>
+        </div>
+        <div id="fade" class="black_overlay"></div>
 
 <!--materialize fixed main navbar-->
-      <div class="navbar-fixed">
-        <nav id="nav-bar">
-        
-          <div class="nav-wrapper teal darken-3">
-            <a href="#!" class="brand-logo left hide-on-small-only">Training and placement cell</a>
-            <a href="#!" class="brand-logo left hide-on-large-only hide-on-med-only">TPC</a>
-              <ul class="right">
-                  <li class="center hide-on-med-and-down">
+        <div class="navbar-fixed">
+            <nav id="nav-bar">
+                <div class="nav-wrapper">
+                    <a href="#!" class="brand-logo left hide-on-small-only">Training & Placement Cell</a>
+                    <a href="#!" class="brand-logo left hide-on-large-only hide-on-med-only">Training & Placement Cell</a>
+                    <ul class="right">
+                    <li class="center hide-on-med-and-down">
                     <!--materialize search-bar-->
-                      <form id="search" method="post" action="index.html" >
-                         <input type="text" name="q" placeholder="Search..." />
-                         <ul id="results">
-                           <li class="tooltip"><a href="index.html">Search Result #1<br /></a>
-                               <span class="tooltiptext">
-                                 <div class="row">
-                                  <div class="col s12 m12 l12">
-                                    <div class="card blue-grey darken-1" id="ss">
-                                      <div class="card-content white-text" id="rr">
-                                        <div id="top-box">
-                                          <img class=class="responsive-img circle" src="{% static 'images/ipu-logo.png' %}" height="70x" width="80px">
-                                          <div id="top-side-box">
-                                            <h5>Name :</h5>
-                                            <h5>Info :</h5>
-                                          </div>
-                                        </div>
-                                        <hr>
-                                        <p>I am a very simple card. I am good at containing small bits of information.
-                                        I am convenient because I require little markup to use effectively.</p>
-                                      </div>
-                                      <hr>
-                                      <div>
-                                         <h5>Technical links</h5>
-                                          <ul class="collapsible" data-collapsible="accordion" id="tech">
-                                            <li>
-                                              <div class="collapsible-header">Code-Chef</div>
-                                              <div class="collapsible-body"><p>Lorem ipsum dolor sit amet.</p></div>
-                                            </li>
-                                            <li>
-                                              <div class="collapsible-header">Code-forces</div>
-                                              <div class="collapsible-body"><p>Lorem ipsum dolor sit amet.</p></div>
-                                            </li>
-                                            <li>
-                                              <div class="collapsible-header">SPOJ</div>
-                                              <div class="collapsible-body"><p>Lorem ipsum dolor sit amet.</p></div>
-                                            </li>
-                                          </ul>
-        
-                                      </div>
-                                      <div id="ff">
-                                        <div class="fixed-action-btn horizontal" id="main-btn">
-                                            <a class="btn-floating btn-large red">
-                                              <i class="large material-icons">supervisor_account</i>
-                                            </a>
-                                            <ul id="jj">
-                                              
-                                              
-                                              <li><a class="btn-floating"><i class="fa fa-github" id="github-icon" aria-hidden="true"></i>
-                                              </a></li>
-                                              <li><a class="btn-floating"><i class="fa fa-google-plus" aria-hidden="true" id="googleplus-icon"></i>
-
-                                              <li><a class="btn-floating"><i class="fa fa-linkedin-square" id="linkedin-icon" aria-hidden="true"></i>
-                                              </a></li>
-                                              <li><a class="btn-floating"><i class="fa fa-facebook-official"  id="fb-icon" aria-hidden="true"></i>
-                                              </a></li>
-
-                                              
-                                              </a></li>
-                                            </ul>
-                                        </div>
-                                      </div>
-                                    </div>
-                                  </div>
-                              </div>
-                             </span>
-                           </li>
-                           <hr>
-                           <li><a href="index.html">Search Result #2</a></li><hr>
-                           <li><a href="index.html">Search Result #3</a></li><hr>
-                               <li><a href="index.html">Search Result #4</a></li>
-                         </ul>
-                      </form>
-                  </li>
-                  <li class="hide-on-large-only"><a href = "javascript:void(0)" onclick = "document.getElementById('light').style.display='flex';document.getElementById('fade').style.display='flex'"><i class="material-icons">search</i></a>
-                  </li>
-                  <li>
-                    <a class="dropdown-button" data-constrainwidth="false" data-beloworigin="true" data-gutter="10" href="" data-activates="dropdown3"><i class="material-icons">add_alert</i></a>
-                  </li>
-
-                  <li>
-                    <a class="dropdown-button" data-constrainwidth="false" data-beloworigin="true" data-gutter="10" href="" data-activates="dropdown2"><i class="material-icons">menu</i></a>
-                  </li>   
-                  <li>
-                    <a class="dropdown-button" data-constrainwidth="false" data-beloworigin="true" data-gutter="10" href="" data-activates="dropdown1"><img src="{% block user_photo2 %}{% endblock %}" class="circle" id="img-corner"></a>
-                  </li>
-                    
-              </ul>
-           
-            </div>
-        </nav>
-      </div> 
+                        <form id="search">
+                            <input type="text" name="q" placeholder="Search for Students, Colleges, and Companies..." />
+                            <ul id="results"></ul>
+                        </form>
+                    </li>
+                    <li class="hide-on-large-only">
+                        <a href = "javascript:void(0)" onclick = "document.getElementById('light').style.display='flex';document.getElementById('fade').style.display='flex'"><i class="material-icons">search</i></a>
+                    </li>
+                    <li>
+                        <a class="dropdown-button" data-constrainwidth="false" data-beloworigin="true" data-gutter="10" href="" data-activates="dropdown3"><i class="material-icons">add_alert</i></a>
+                    </li>
+                    <li>
+                        <a class="dropdown-button" data-constrainwidth="false" data-beloworigin="true" data-gutter="10" href="" data-activates="dropdown2"><i class="material-icons">menu</i></a>
+                    </li>   
+                    <li>
+                        <a class="dropdown-button" data-constrainwidth="false" data-beloworigin="true" data-gutter="10" href="" data-activates="dropdown1"><img src="{% block user_photo2 %}{% endblock %}" class="circle" id="img-corner"></a>
+                    </li>
+                </ul>
+                </div>
+            </nav>
+        </div> 
 <!--navbar ends-->
 
-<!--second navbar-->
-      <div id="post-navbar" class="teal lighten-4">
-            <h5>{% block user_type%}{% endblock %}</h5><!--Teacher, students or company-->
-            <h5><i class="material-icons">trending_flat</i></h5>
-            <h5>{%block user_name%}{% endblock %}</h5><!--name of current user-->   
-      </div>
-<!--second navbar ends-->
-       <main>
-           
-         <!--Tabs bar begins--> 
-        <div id="tab-bar">
-            <div class="row">
-              <div class="col s8">
-                   <ul class="tabs">
-                        <!--naming for tabs-->
-                        {% block tabs %}
-                        <!--each li  represents a new tab with the name-->
+        <main>
+            <!--Tabs bar begins--> 
+            <div id="tab-bar">
+                <div class="row">
+                    <div class="col s12">
+                        <ul class="tabs">
+                            <!--naming for tabs-->
+                            {% block tabs %}
+                            <!--each li  represents a new tab with the name-->
                             <li class="tab col s2"><a class="active" href="#test1">Test 1</a></li>
+                            {% endblock %}
+                        </ul>
+                    </div>
+                    <div id="tabs-data-div"> 
+                        {% block tabs_content %}
                         {% endblock %}
-                  </ul>
-              </div>
-                 <div id="tabs-data-div"> 
-                  {% block tabs_content %}
-                  {% endblock %}
-                 </div>
+                    </div>
+                </div>
             </div>
-        
-        </div>
-         
+        </main>
 
-       </main>
-            
-      
-
-    
-
-
-
-      
-      <script type="text/javascript" src="{% static 'css/jquery.js' %}"></script>
-      <script type="text/javascript" src="{% static 'css/materialize/js/materialize.min.js' %}"></script>
-      <script type="text/javascript">
-
-      var box = $('#dropdown3');
-
-      box.click(function(e) {
-            e.stopPropagation();
-        });
-
-     
-
-
-      </script>
-      {% block JS %}{% endblock %}
-
-   </body>
+        <script src="{% static 'material/js/jquery-2.2.0.js' %}"></script>
+        {% include 'material/includes/material_js.html' %}
+        <script type="text/javascript">
+            $('#dropdown3').on('click', function(e){e.stopPropagation();});
+            $('.dropdown-button').on('click', function(e){e.preventDefault()});
+			$('nav .brand-logo').on('click', function(e){location.href='';});
+        </script>
+        {% block scripts %}{% endblock %}
+    </body>
 </html>
