--- a/ipu/templates/account/landing.html
+++ b/ipu/templates/account/landing.html
@@ -7,6 +7,7 @@
 {% block head %}
 	<link type="text/css" rel="stylesheet" href="{% static 'account/landing.css' %}" />
 	<link type="text/css" rel="stylesheet" href="{% static 'common/css/font-awesome/css/font-awesome.min.css' %}" />
+	<link type="text/css" rel="stylesheet" href="{% static 'materialize-blue.css' %}" />
 {% endblock %}
 
 {% block content %}
