--- a/ipu/templates/college/create.html
+++ b/ipu/templates/college/create.html
@@ -1,10 +1,22 @@
 {% extends 'account/base.html' %}
-{% block title %} Create College {% endblock title %}
+{% load material_form %}
+{% block title %} College | Sign Up {% endblock title %}
 {% block content %}
-    <form enctype="multipart/form-data" action="{% url 'create_college' %}" method='POST' id='college-creation-form'>
+    <form enctype="multipart/form-data" action="{% url 'create_college' %}" method='POST' id='college-creation-form' >
         {% csrf_token %}
-        {{ college_creation_form.as_p }}
-        <input type="submit" name="createcollege" value="Submit" />
+		<div class="row">
+			<div class="col s6 m12">
+				<h4> Create Profile </h4>
+				<div>
+	 		     	{% form form=college_creation_form %}{% endform %}
+				 </div>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col s6 m12">
+		        <button type="submit" name="createcollege" class="btn waves-effect waves-light">Finish<i class="material-icons right">send</i></button>
+			</div>
+		</div>
     </form>
 	<br />
 	<a href="{% url 'logout' %}">Logout</a>
