--- a/ipu/templates/recruitment/associate.html
+++ b/ipu/templates/recruitment/associate.html
@@ -1,9 +1,10 @@
 {% extends 'account/base.html' %}
+{% load material_form %}
 {% block title %} Associate {% endblock %}
 {% block content %}
 	<form method='POST' action="{% url 'associate' %}" id="associate-form">
 		{% csrf_token %}
-		{{ association_form.as_p }}
+		{% form form=association_form %}{% endform %}
 		<input type="submit" value="Associate" />
 	</form>
 {% endblock content %}
