--- a/ipu/templates/college/pub_profile.html
+++ b/ipu/templates/college/pub_profile.html
@@ -4,11 +4,11 @@
 		<div class="card" id="ss">
 			<div class="card-content white-text" id="rr">
 				<div id="top-box">
-					<img class="responsive-img circle" src="{% if photo %}{{ photo }} {% else %}{% static 'images/ipu-logo.png' %}{% endif %}" height="70px" width="80px" >
+					<img class="responsive-img circle" src="{% if college.photo %}{{ college.photo.url }} {% else %}{% static 'images/ipu-logo.png' %}{% endif %}" height="70px" width="80px" >
 					<div id="top-side-box">
-						<h4>{{ name }}</h4>
-						<h5>Offers {{ streams }} different programmes and streams</h5>
-						<h6>Has more than {{ students }} student{{ students|pluralize }} active on this platform)</h5>
+						<h5>{{ name }}</h5>
+						<h6>(Offers {{ streams }} different programmes and streams</h6>
+						<h6>Has more than {{ students }} student{{ students|pluralize }} active on this platform)</h6>
 					</div>
 				</div>
 				<hr>
