--- a/ipu/templates/faculty/new_home.html
+++ b/ipu/templates/faculty/new_home.html
@@ -39,10 +39,11 @@
 {% endblock %}
 
 {% block tabs%}
-	<li class="tab col s2"><a class="active" href="#tab1">Companies Visiting</a></li>
-	<li class="tab col s2"><a href="#tab2">Status</a></li>
-	<li class="tab col s2"><a href="#tab3">Qualifications</a></li>
-	<li class="tab col s2"><a href="#tab4">Settings</a></li>
+	<li class="tab col s2"><a class="active" href="#tab1">Verify students</a></li>
+	<li class="tab col s2"><a href="#tab2">College Associations</a></li>
+	<li class="tab col s2"><a href="#tab3">Association Requests</a></li>
+	<li class="tab col s2"><a href="#tab4">Notifications</a></li>
+	<li class="tab col s2"><a href="#tab5">Settings</a></li>
 {% endblock %}
 
 {% block tabs_content %}
@@ -50,4 +51,5 @@
 	<div id="tab2" class="col s12">Data 2</div>
 	<div id="tab3" class="col s12">Data 3</div>
 	<div id="tab4" class="col s12">Data 4</div>
+	<div id="tab5" class="col s12">Data 5</div>
 {% endblock %}
